2021-07-15  Ayumi Kojima  <ayumi_kojima@apple.com>

        [Big Sur wk1 Debug] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-duration-loop.html is a flaky failure.
        https://bugs.webkit.org/show_bug.cgi?id=228006

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2021-07-15  Ayumi Kojima  <ayumi_kojima@apple.com>

        [Mac OS & iOS] imported/w3c/web-platform-tests/html/semantics/embedded-content/the-embed-element/embed-network-error.sub.html is a flaky failure.
        https://bugs.webkit.org/show_bug.cgi?id=227998

        Unreviewed test gardening.

        * platform/ios-wk2/TestExpectations:
        * platform/mac/TestExpectations:

2021-07-15  Eric Hutchison  <ehutchison@apple.com>

        transitions/transition-end-event-nested.html is a flaky failure.
        https://bugs.webkit.org/show_bug.cgi?id=228002.

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2021-07-15  Ayumi Kojima  <ayumi_kojima@apple.com>

        [Big Sur wk1 arm64] http/tests/security/frameNavigation/xss-DENIED-plugin-navigation.html is timing out
        https://bugs.webkit.org/show_bug.cgi?id=227973

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2021-07-15  Tim Nguyen  <ntim@apple.com>

        Re-import html/semantics/interactive-elements/the-dialog-element WPT
        https://bugs.webkit.org/show_bug.cgi?id=227986

        Unreviewed.

        Upstream commit: https://github.com/web-platform-tests/wpt/commit/10a8411ba8ed0012da5ecefc6eba9956a13b2c21

        * platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-form-submission-expected.txt:

2021-07-15  Philippe Normand  <pnormand@igalia.com>

        [GStreamer][Pipewire] Implement getDisplayMedia() backend
        https://bugs.webkit.org/show_bug.cgi?id=210926

        Reviewed by Xabier Rodriguez-Calvar.
